Prep for April 2015 issue.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -1,3 +1,4 @@
+
 % Template PNSAC newsletter - Contact information
 % Language: Latex
 
@@ -16,10 +17,10 @@ Director, President; Fund Raising\\
 613-612-4920\\
 \email{rslodgeca@gmail.com}}
 
-\address{Bill Tate\\
-Director, Vice President; Special Events, Quarterly Meetings \\
-613-523-8817\\
-\email{billtate@bell.net}}
+%\address{Bill Tate\\
+%Director, Vice President; Special Events, Quarterly Meetings \\
+%613-523-8817\\
+%\email{billtate@bell.net}}
 
 \address{Bruce Gemmill\\
 Director, Project Manager; Membership\\
@@ -36,15 +37,15 @@ Director, Deputy Project Manager\\
 
 %\begin{minipage}{\columnwidth}
 
-\address{Bruce Grant\\
-Director, NStar Chronicle Editor\\
-\email{editor@projectnorthstar.ca}}
+%\address{Bruce Grant\\
+%Director, NStar Chronicle Editor\\
+%\email{editor@projectnorthstar.ca}}
 
 \columnbreak
   
-\address{Drew Hodge\\
-Director, newsletter typesetting, website, social media\\
-\email{ldhodge@gmail.com}}
+%\address{Drew Hodge\\
+%Director, ewsletter typesetting, website, social media\\
+%\email{ldhodge@gmail.com}}
   
 \address{Phil Chrysler\\
 Merchandise\\
@@ -52,7 +53,7 @@ Merchandise\\
   
 
 \address{Roger Button, BA. MA. LLB.\\
-Corporate Secretary\\
+Director, Corporate Secretary, NStar Chronicle Editor\\\\
 \email{rgrbttn@gmail.com}}
 
 \address{Paul Labranche\\
@@ -69,10 +70,10 @@ Treasurer\\
     GRASS-News.}}
 
 
-\small\address{Editor: Bruce Grant\\
+\small\address{Editor: Roger Button\\
 \small\email{editor@projectnorthstar.ca}}
 
-%\address{Typesetter: Drew Hodge}
+\address{Typesetter: Drew Hodge}
 
 %\end{multicols}
 
