--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -4,19 +4,14 @@
 
 % Head
 
-\title{RAF Lightning with Over-Wing Tanks}
+\title{Operation Hawk}
 %\subtitle{Part 4}
-\author{Jim Riddoch}
+\author{Hugh A. Halladay, Legion Magazine}
+
+\textit{Photos courtesy of Library Archives Canada and 426 Thunderbird
+  Sqn, RCAF.}
 
 \maketitle
-
-During the early 60's Britain's Defence Department decided that the
-new fleet of Lightning aircraft should have the capability to extend
-its current sortie of 22 minutes to permit ferry to the Middle
-East. In-flight refuelling had not worked successfully due to the
-offset probe positioned under one wing. Accordingly BAC (British
-Aircraft Corporation,Warton Division) was awarded a contract to
-develop extended wing tanks that could be jettisoned if necessary.
 
 \begin{figure}[htbp]
    \vspace{2em}
@@ -29,94 +24,195 @@ develop extended wing tanks that could be jettisoned if necessary.
    \label{fig:jim_riddoch.eps}
 \end{figure}
 
-%% \begin{footnotesize}
-%% [Image: {\normalfont\color{blue}\href{http://www.airteamimages.com/english-electric-lightning_XP693_united-kingdom---royal-air-force_43865.html}{English
-%%     Electric Lightning with over-wing tanks}}]
-%% \end{footnotesize}
+In 1947, while Prime Minister Mackenzie King was in London, his
+Minister of Foreign Affairs (and chosen suc-cessor), Louis St-Laurent,
+consented to Canadian participation on the United Nations Temporary
+Commission of Korea (UNTOK). On his return to Canada, King furiously
+confronted St-Laurent. He wanted no part---even at the fringes—of
+Korean affairs, which he considered dangerous.
 
-%\begin{figure}[htbp]
-%   \vspace{2em}
-%   \centering
-%   %name of the graphic, without the path AND in EPS format:
-%   \includegraphics[scale=0.5]{Eng3Intercooler.eps}
-%   %caption of the figure 
-%   \caption*{\small \em Garry installing the intercooler on engine 3.}
-%   %label of the figure, which has to correspond to \ref{}:
-%   \label{fig:Eng3Intercooler}
-%\end{figure}
+St-Laurent, in turn, threatened to resign. Ultimately, the old prime
+minister backed down. The incident marked a phase in the changing of
+the guard in Ottawa, and a movement towards increasing Canadian
+involvement in international affairs.
 
-Unfortunately the Lightning with its high speed wings had limited
-capacity for wing tip tanks and already with armament pylons under
-wing could not accommodate under-wing tanks, so the decision was made
-to develop over-wing tanks secured with pylons through the wing
-structure. These tanks would each carry 250 imperial gallons to
-provide initial fuel transfer after take off and be jettisoned once
-empty.
+Mackenzie King died on July 22, 1950. As he lay in state in the
+Parliament Buildings, six North Star aircraft of No. 426 Squadron flew
+over, saluting his passing as they were en route to Tacoma,
+Washington, to commence a Royal Canadian Air Force transoceanic
+airlift in sup-port of United Nations forces fighting in Korea.
 
-I was designated to be the Development Engineer to carry out the
-development and testing of this design about 1963/64. The design
-concept of these tanks had to include a balanced transfer system to
-maintain aircraft C of G during take off and climb out, this meant 5
-small interior sealed compartments pressurized with air to permit
-sequential transfer. Also an emergency fuel jettison system prior to
-tank wing ejection. As you can readily appreciate this was a very
-challenging design and even more demanding for testing and
-certification.
+It is not known if the former prime minister was spin-ning in his
+coffin.
 
-Once the initial test tanks were built they were dispatched to
-Mechanical Test Department at Warton Lancashire, where I worked.
-Needless to say the RAF were keen to witness the development and
-testing of these over-wing tanks. A Wing Commander headed a team of
-three Senior Techs to keep track of our progress. Fortunately the
-Techs were very helpful and hands-on in working with us.  You can
-imagine the challenges we faced checking the transfer sequences at
-varying attitudes. Many a Saturday morning was spent testing and
-verifying these change in attitudes and minimizing fuel transfer loss,
-the end result being approximately 225 gallons of fuel transferred
-from each wing tank depending on aircraft attitude and roll.
+Although the RCAF had considerable air transport experience during
+the Second World War, only the work of No. 168 (Heavy Transport)
+Sqdn., delivering service mail to Europe, constituted a sustained
+transatlantic operation. With the retirement of its Fortress and
+Liberator aircraft, which were converted from bombers to freighters,
+the RCAF briefly lost its long-range transport capability. This gap
+was soon filled by the Canadair North Star, built in Montreal for the
+RCAF, TCA (Trans-Canada Airlines and later Air Canada) and other civil
+carriers.
 
-The next major design requirement was the emergency fuel jettison;
-this was to be accomplished by air pressure from centre compartment to
-rear of the tank where a jettisonable fairing was fastened by
-explosive bolts and attached by a cord to a bung on the end of the
-fuel ejection pipe. Talk about Heath Robinson device, this takes the
-biscuit! Suffice to report that on the ground test of this
-ill-conceived system with Chief Designer and my Chief Engineer and
-many observers with cameras, the rear fairing departed into oblivion
-and the cord broke, due to a miserable sub standard cord substituted
-instead of a parachute cord as specified. The bung remained firmly
-attached to the jettison pipe. It was about this time I first thought
-of emigrating to Canada, in fact anywhere outside Britain!
+The North Star was basically a Douglas DC-4, but with Rolls-Royce
+Merlin in-line engines instead of Pratt-andWhitney radials. It was a
+dependable aircraft, but generations of passengers and crew would
+remember the tremendous noise and vibration in flight. The full story
+of this is related by Larry Milberry in his 1982 book The Canadair
+North Star.
 
-Needless to say the cord was replaced, the ejection system proved
-satisfactory and the tanks were certified for flight test. This was to
-be done with one tank attached to the top of one wing and painted with
-black and white checkered squares for easy recognition when ejected. I
-always remember the Test Pilot, Peter Knight inquiring about the
-likely occurrence of the tank separating from the wing and hitting the
-tail of the aircraft. I assured him that ground testing of a model in
-the wind tunnel had worked, in fact the small tank had disappeared
-through the end of the tunnel and took some time to recover in the
-neighbouring field.
+Deliveries of the new aircraft to the RCAF were delayed when
+priority was given to TCA to help it establish a Canadian presence in
+transatlantic commercial flying. Crews of No. 426 (Thunderbird)
+Sqdn. finally began North Star training early in 1948, and actual
+operations on the type commenced that summer.
 
-To replicate the fuel system jettison some bright spark proposed
-filling the tank with coloured water for better visibility. The
-aircraft took off, circled Warton Aerodrome and made a low pass to
-jettison the coloured water over the attentive crowd including chiefs
-and dignitaries. Fortunately, the jettison of the tail fairing and
-bung release worked perfectly and the water emerged in a colourful
-shower.  
+While the RCAF did not participate in the July 1948 to May 1949 Berlin
+Airlift, a few individual aircrew did while on exchange duties with
+the Royal Air Force and United States Air Force. As it happened, the
+airlift seriously degraded the USAF Military Air Transport Service
+(MATS) after flour and coal dust penetrated the seams of every
+participating aircraft. When it was next marshalled to meet the Korean
+crisis, MATS needed all the help it could get—and that was forthcoming
+when the Canadian government committed No. 426 Sqdn.—its only
+long-range transport unit—to the Korean campaign.
 
-The weather gods not being with us, the wind blew all the water over
-the spectators covering their expensive clothing with a colourful dye!
-Finally, the tank was ejected safely over Morecombe Bay and eventually
-recovered and returned to BAC Warton amidst embarrassed and colourful
-faces. As one might expect, this completely successful test left the
-Wing Commander disgusted with the entire experiment. He cancelled the
-project.
+In recounting the RCAF’s transpacific operational story, one must pay
+tribute to Laurence Motiuk, author of two monumental volumes, namely
+Thunderbirds at War: Diary of a Bomber Squadron, and Thunderbirds for
+Peace: Diary of a Transport Squadron, which set out the history of
+No. 426 Sqdn. The latter work was particularly difficult to write,
+given that in the 1950s, RCAF units often submitted incomplete
+historical narratives and in some instances neglected to prepare any
+at all.
 
-Any thoughts I had of joining the RAF completely disintegrated. Once
-again, immigration to Canada looked much more inviting.
+Motiuk’s account of the postwar squadron was drawn from numerous
+unofficial records, including log books as well as the sketchy unit
+reports.
+
+Almost from the moment that North Korea launched its invasion of South
+Korea on June 25, 1950, No. 426 Sqdn. personnel were preparing for
+overseas operations. If Canada was going to be involved, that unit was
+certain to be mobilized. Cabinet approval came through on July 19,
+1950. The squadron cancelled all further transport work with the
+exception of vital northern resupply.
+
+Deployment to McChord Air Force Base, Tacoma, Washington, began on the
+25th. Six North Stars, 12 crews and 185 ground personnel were
+dispatched. Twothirds of the aircrew were veterans of the Second
+World War; the remainder were men who had joined the RCAF after
+1947. Three of the aircraft left Tacoma on the 27th, arriving at
+Haneda in Tokyo two days later. Operation Hawk was under way.
+
+It might be noted that No. 426 Sqdn. was not alone in supporting
+operations in Korea. Historian Carl Mills reminds us that Canadian
+Pacific Airlines provided charter services to MATS from August 1950 to
+March 1955, conducting 703 transpacific flights. Unlike the RCAF
+operation, these involved passengers only. They lost one aircraft
+(CF-CPC), a DC-4 with seven crew members and 31 passengers on July 2,
+1951. The aircraft, outbound from Vancouver, disappeared near
+Yakutat, Alaska; no trace was ever found.
+
+The North Stars followed a challenging route. From McChord to
+Elmendorf Air Force Base in Alaska was 1,490 miles. This was followed
+by a 1,537-mile run to Shemya Air Force Base in the Aleutian
+Islands. Next came the 2,104mile flight to Haneda in Tokyo, with the
+aircraft making landfall at Matsushima (Honshu, Japan).
+
+The Shemya-Matsushima leg was particularly challenging; care had to
+be taken not to drift into Russian airspace, a task complicated by
+Russian efforts to jam radio and navigational aids. Depending on the
+season, the aircraft might return by the same route, or take a more
+southerly central Pacific track from Haneda to Wake Island to Hickam
+Air Force Base in Honolulu. From there the aircraft would journey to
+Travis Air Force Base in San Francisco, and then on to McChord.
+
+Initially it was hoped the unit could dispatch one sortie per day, but
+this proved beyond the resources of a six-plane outfit. Eventually,
+No. 426 found it could send off five aircraft per week. Not
+surprisingly, its peak activity coincided with the buildup of United
+Nations forces in Korea and their maintenance during the period of
+mobile warfare.
+
+Between July 28 and Dec. 31, 1950, the squadron dispatched 123
+aircraft across the Pacific. In the whole of 1951 it was 193 missions,
+but in 1952 it dropped to 133. Not only were the Thunderbirds
+returning to more traditional duties in Canada, they were also
+assuming the job of providing transport, including personnel
+rotation, to Canada’s growing land and air presence in Europe. In
+1953—the last full year of Hawk—it was 85 missions.
+
+The final Hawk mission departed McChord on May 31, 1954, and ended at
+the squadron’s home base at Dorval on June 9, 1954. As it wound up, an
+RCAF dispatch reported that No. 426 Sqdn. had flown 599 round
+trips—four of them directly to Korea itself—logged 34,000 flying
+hours, carried 13,000 personnel, and airlifted 3,500 tons of
+freight. The report erred on two points. Six flights (not four) had
+gone directly to Korea. The other discrepancy was that there were
+only 584 missions; for some unknown reason the numbered listing of
+flights had jumped from “439” on Nov. 26, 1952, to “455” on Nov. 28,
+1952; the inaccurate 1954 press release continues to be quoted, ad
+nauseam, to this day.
+
+Operation Hawk was accomplished with no fatalities but some close
+calls and more than a few incidents. On Sept. 15, 1950, Wing Commander
+C.H. Mussells, Commanding Officer of No. 426 Sqdn., departed McChord
+for Elmendorf with American soldiers and anti-tank ammunition. Both
+were urgently needed in Korea, so the aircraft had been permitted an
+overload clearance.
+
+Three hours after takeoff, one of the Merlin engines began overheating
+through a coolant leak. Mussells shut down the engine, feathered the
+propeller, and prepared to return to McChord. Then a second engine on
+the same side overheated. It was also shut down. There was now no
+question about getting to McChord; Mussells prepared to make an
+emergency landing at Sandspit (Moresby Island).
+
+To lighten the aircraft, Mussells dumped excess fuel. Some passengers
+mistook the misty gasoline trail for smoke, panicked and crowded to
+the back of the fuselage, as if that would have offered safety. This
+complicated the process of trimming the aircraft for landing. A
+crewman ordered everyone back to their seats, but the soldiers could
+not have been reassured as the North Star flew over a crashed USAF
+aircraft, its tail still sticking out of the water, during the final
+approach into Sandspit. Happily, Mussells landed safely.
+
+On April 19, 1951, a North Star piloted by Flight Lieutenant J.A. Watt
+was on a route-training flight to an unfamiliar field—Ashiya—located
+between Osaka and Kobe, Japan. He was cleared by Ashiya tower to
+descend from 4,000 to 3,000 feet. At 3,400 feet the aircraft hit trees
+atop a hill that was not even indicated on the airfield map. No one
+was injured but the aircraft sustained considerable damage to its
+nose, oil cooler and exterior radio aerials. The pitot head was also
+wiped out, and with it the airspeed indicator. The aircraft also lost
+the use of an engine.
+
+Fortunately, the passengers included three of the most experienced
+North Star captains in the RCAF: Wing Cmdr. Mussells, Wing
+Cmdr. J.K. MacDonald, and Flying Officer Robert Edwards. After
+assessing the damage, Mussells ordered MacDonald and Edwards to com-
+plete the landing, which they did.
+
+On the night of Dec. 27, 1953, Squadron Leader E.L. Hare was homeward
+bound from Japan in North Star 17516, bound for Shemya. The weather
+was bad and the ceiling minimal. Visibility was a half mile with a
+savage crosswind blowing at a 90-degree angle. The runway surface was
+covered with wet snow; braking conditions were poor. On the third
+landing attempt, everything came together in the worst possible
+way. The North Star was blown off the runway into a gully. Everyone
+survived, but 17516 was a total “write-off”–the only RCAF aircraft
+lost in the course of Operation Hawk.
+
+Canadian military policy with respect to honours and awards was very
+restrictive from 1946 onwards, but rules were relaxed during the
+Korean War. Personnel involved in Hawk were awarded one Officer of the
+Order of the British Empire (OBE), one Member of the Order of the
+British Empire (MBE), four Air Force Crosses, two Air Force Medals and
+13 Queen’s Commendations. Most of these were to aircrew personnel, but
+Sqdn. Ldr. W.H. Lord was granted an MBE for his work in establishing
+and supervising the maintenance detachments that serviced the North
+Stars wherever they alighted along the 11,000 mile route.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
