--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -5,129 +5,192 @@
 % Head
 
 \title{Project Manager's Progress Report}
-\subtitle{April 2014}
+\subtitle{April 2015}
 \author{Bruce Gemmill}
 
 \maketitle
 
-Due to museum preparations for a display to mark the beginning of
-the First World War and other events in 2014, the restoration
-space used by Project North Star was taken over by other museum
-projects, and most work on the North Star was suspended.
-However, some limited work did continue.
+Since our last Project Report, our project has gone through much
+upheaval, and work has been delayed for a number of reasons.  However,
+I can report now that we are back on track and making steady progress
+on several parts of the North Star. This report tracks progress since
+April 2014.
 
-\section{Nr 3 Engine}
-\label{sec:engines_3}
+\section{Restoration Shop Shutdown}
+\label{sec:restoration_shop}
 
-Work on Engine 3 was halted for several weeks in early 2014, but
-has now resumed on a reduced work schedule.  Most accessories are
-now installed, and soon the cowl panels will be fitted.  It is
-expected that Engine 3 will be installed late this spring or
-early summer, so that work can begin on removing and restoring
-Engine 4.
+Engine \#3 was in the final stages of assembly when we had to shut down
+our project at the end of December 2013, to make way for other museum
+work, in preparation for events to mark the 100th anniversary of the
+beginning of the First World War in 2014.  In particular, new exhibits
+in the museum required all of the available floor space in the shop,
+as well as full time work by all museum conservation staff, meaning
+the volunteer crew could not be supervised as usual.
 
-This downtime also offered the opportunity for the engine crew to
-clean and re-organize the engine shop.
+However, two volunteers, myself and Peter Trobridge, were allowed to
+work on the aircraft during the shutdown between January and July
+2014.  The focus was on completing the assembly of the cockpit and
+crew lounge.  More on this later.
 
-\section{Cockpit}
-\label{cockpit}
+\section{Engine Frame}
+\label{sec:engine_frame}
 
-While restoration work in the shop could not be continued, we
-used the opportunity to install the crew seats and other restored
-items to the cockpit.  The pilot seat was installed (first
-officer seat was installed last year) then the railings and
-safety board were installed behind the seats.  
+Nr 3 engine frame was completed after the installation of the engine
+and supercharger.  Fitting the many cowl panels proved difficult, due
+to the extensive rework that many of these items went through, causing
+some alignment difficulties when fitting these panels onto the engine
+frame.  This work was done after work resumed in July 2014, and the
+completed engine was successfully installed on the aircraft last
+summer.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{fwd_cockpit_complete.eps}
-   %caption of the figure 
-   \caption*{\small \em Forward cockpit -- complete.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:fwd_cockpit_complete}
-\end{figure}
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   %name of the graphic, without the path AND in EPS format:
+%   \includegraphics[scale=0.5]{fwd_cockpit_complete.eps}
+%   %caption of the figure 
+%   \caption*{\small \em Forward cockpit -- complete.}
+%   %label of the figure, which has to correspond to \ref{}:
+%   \label{fig:fwd_cockpit_complete}
+%\end{figure}
 
-Next we installed
-the radio officer and navigator tables, and the seats for these
-positions.  The radio officer seat proved to be a particular
-challenge, as the floor in this area is no longer flat, and some
-modifications to the seat rails were necessary to allow the seat
-to slide.  Finally the flight engineer's jump seat was attached
-to the railing.  With five crew seats installed, the cockpit is
-very cramped.
+\section{Nr 4 Engine}
+\label{sec:engine_4}
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{radio_position.eps}
-   %caption of the figure 
-   \caption*{\small \em Radio Officer's position showing the morse
-     code key.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:radio_position}
-\end{figure}
+The last engine to undergo restoration was removed in July and work
+immediately began in the engine shop to disassemble the engine frame
+and move the engine to the engine stand for restoration.  All cowl
+panels, pipes, hoses and accessories have been removed and stored
+until space is available to restore these items.  The priority has
+been to disassemble the engine, which was completed in October, and
+restoration and reassembly of engine 4 is now well underway.  The
+refurbished crankshaft has been installed in the engine block, and the
+connecting rods and pistons cleaned and polished.  Work has now begun
+on the more complex cylinder heads and valve train assemblies.
 
-The cockpit installations were finished off by installing the
-curtains, crew oxygen hoses, and a Morse code key at the radio
-position.
+Normally, work would also be underway to restore the engine frame, but
+due to a lack of space, this will be delayed until the engine is back
+together and can be moved out of the engine shop.  Some cleaning and
+paint stripping has been done, but further work on the frame will
+likely have to wait until more space is available for full restoration
+of this large item.  This work will likely delay the completion of Nr
+4 engine until 2016.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{cockpit_curtain.eps}
-   %caption of the figure 
-   \caption*{\small \em Finishing touches -- the cockpit curtain.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:cockpit_curtain}
-\end{figure}
-
-\section{Crew Lounge, Galley,  and Forward Washroom}
+\section{Cocpit, Crew Lounge, Galley,  and Forward Washroom}
 \label{crewlounge}
 
-The floor under this section was repaired by removing a section
-of badly corroded I-beam and fabricating a new one from several
-pieces of aluminum which were riveted in place to support the
-floor.  Once this repair was completed, new cushion flooring was
-cut and glued to the crew lounge and the washroom floor, then
-various pieces of floor trim were installed.  To install the crew
-seat, it was necessary to remove the lower support section, since
-the fully assembled seat could not easily fit through the narrow
-doorway.  Once the seat was installed, we added the crew table
-and bunk bed, along with the secure storage box.  We also
-installed the curtain rod and new curtains to close off the bunk
-bed. The installation was finished off by re-installing the door
-between the lounge and the main cabin, so that this fully
-restored area can be protected from dust and debris while the
-main cabin undergoes restoration over the next two years.
+Since our last report, the crew lounge and galley equipment was fully
+restored.  A new wall was installed in the galley, as the old wall
+contained asbestos and needed to be removed for safety reasons.  The
+galley cupboards were badly corroded, so a new set was built, with
+only the original doors remaining.  This was installed in the galley,
+along with the auxiliary hydraulic reservoir, after two sections of
+the floor were patched to repair corrosion damage.  New flooring was
+cut and glued in the crew lounge and washroom, then the washroom
+equipment was installed, including the toilet and washroom door, and
+the vanity sink and mirror.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{new_galley_floor.eps}
-   %caption of the figure 
-   \caption*{\small \em New galley and floor.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:new_galley_floor}
-\end{figure}
+The five crew seats that had been removed early in the project were
+finally installed in the cockpit, after installing the radio operator
+and navigator tables, and the appropriate seat rails.  We also
+installed new cockpit curtains, and completed these crew positions by
+installing a donated headset and several microphones, along with a
+Morse code key at the radio position.
 
-The completion of the forward area of the aircraft marks a
-significant milestone in the restoration of the North Star.
+The seat rails and seats for the crew lounge were installed, along
+with the crew table and secure stowage case.  The crew bed was
+installed above the crew seats, and then the curtain rod with a new
+set of curtains was installed to complete the crew lounge.  The access
+door to the crew area has not been fully restored, but it was
+re-installed with a new lock to secure the forward portion of the
+aircraft.  The cockpit, crew lounge and forward washroom are now
+complete.  This is a significant milestone for the project, and has
+been very popular with select museum visitors who have been allowed
+access.
 
-\section{Planned Restoration Work 2014}
+\section{Fuselage and Main Cabin}
+\label{sec:main_cabin}
+
+The baggage compartments are now fully restored, and the refurbished
+battery elevators were installed just aft of the nose wheel.  Work has
+now begun on the main cabin.  This started with removal of various
+fittings along the starboard side of the cabin, then removing the wood
+paneling below the windows, and then removing the wood cargo floor
+panels to expose the metal sub floor.  Most of the side panels and
+some floor panels are badly damaged and will need to be replaced.  The
+fittings for patient litters and troop seats were also removed.
+Finally, the starboard windows were removed.  Once all the fittings
+were removed, work began on repairing corrosion damage along the
+exposed ribs and sub floor.
+
+The rear washroom was also dismantled, after removing the toilet and
+fittings.  The floor under the toilet was badly corroded, and the old
+floor panel was removed.  This required drilling out approximately
+1000 rivets!  A new panel has been made and will be installed shortly.
+Portions of the corroded rear bulkhead were also removed, so that new
+panels can be installed.  Some items were also removed from the tail
+section, to allow for thorough cleaning and spot priming bare metal
+where necessary.  During this work damage was discovered on the torque
+tube that controls the movement of the rudder.  This was unexpected,
+and will require removal of the tail cone to allow for a new torque
+tube to be fitted.
+
+Several badly corroded sections of the starboard side of the cabin
+have been repaired, and work continues with corrosion repairs and
+other cleanup while the aircraft is inside.  Part of the forward cargo
+door has been removed for restoration.  The paratroop door insert is
+complete, and the remaining portion of the forward cargo door is being
+stripped and repaired prior to painting.  It is likely this will have
+to be re-installed on the aircraft before all painting and restoration
+is complete, so as not to delay it’s move outside.
+
+A major effort was launched to restore the large heater ducts removed
+from the main cabin.  These were covered with formed mica insulation
+sections, which were removed earlier.  Many of these sections fell
+apart and could not be reused.  After many repairs to the metal
+ductwork, new sections of mica were formed in a jig and glued to the
+ducts.  These duct sections are in storage waiting for completion of
+the main cabin so they can be installed on the ceiling.
+
+Work has now begun on the port windows and wall sections.  We hope to
+complete the windows soon, as these must be installed before the
+aircraft can be moved outside.
+
+\section{Cabin Liners and Troop Seats}
+\label{sec:liners_troop_seats}
+
+The original cabin liners were removed from the aircraft earlier in
+the project.  These had been washed and stored until repair work could
+be done.  All liners were unrolled, photographed and assessed for
+damage.  Some liners will be repaired, while others, particularly the
+cargo door liners, need to be replaced because the fabric is too badly
+deteriorated.  A sewing station has been set up in the storage hangar,
+and several of the new liners have been completed.  These will need to
+have new fasteners installed, then painted to match the original
+liners.
+
+The North Star was originally fitted with troop seats down both sides
+of the main cabin.  These could be stowed against the wall to make
+room for cargo, or unrolled and set up to carry military personnel.
+The original seats were removed by the RCAF, so a decision was made to
+make a new set, using funds donated by Project North Star members.
+Seat fabric, steel and aluminum tubing was ordered, and the troop seat
+sections were fabricated, based on available drawings.  All seat
+sections have been completed, and have been stored until the main
+cabin is completed.
+
+\section{Planned Restoration Work---2015}
 \label{sec:plannedwork}
 
-Some limited work is being done to remove fittings and wall
-panels from the main cabin, in preparation for some major
-restoration work this summer.  Fabric work on the troop seats is
-nearing completion, although the seats will not be installed
-until all work on the main cabin is complete.  We hope to resume
-a full work schedule by June, with the aircraft outside once
-more.
+Over the next year, we will continue to work on Engine 4 and the main
+cabin and tail section.  The aircraft will be moved outside this
+summer for some interior painting.  This means the windows and doors
+will need to be installed for weatherproofing and security.  During
+this time we also hope to begin fabricating new wall and floor
+sections.  One other work item that may be started is to clean and
+restore the four engine nacelles.  Pipes and fittings need to be
+removed, followed by a thorough cleaning and a fresh coat of paint.
+This work may be delayed until qualified volunteers become available.
 
 \begin{footnotesize}
   \raggedleft PNSAC\\
