--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -49,9 +49,9 @@
 
 \begin{document}
 
-\volume{10} % \volnumber{10}
+\volume{11} % \volnumber{10}
 \issue{1}
-\date{May 2014} 
+\date{April 2015} 
 \titlepage
 
 % Editor's notes
@@ -87,9 +87,16 @@
 
 \pagebreak
 
+% Volunteer's corner ................................................. %
+
+% Volunteer bio
+\begin{article}                 
+ 	\input{article_Volunteer1} 
+\end{article}
+
+
 % Features
 % ........................................................... %
-
 
 % Feature article
 
@@ -100,26 +107,18 @@
 %\pagebreak
 
 % Feature article
-\begin{article}                 
-	\input{article_Feature2} 
-\end{article}
-
-\pagebreak
-
-% Feature article
-\begin{article}
-	\input{article_Feature3} 
-\end{article}
+%\begin{article}                 
+%	\input{article_Feature2} 
+%\end{article}
 
 %\pagebreak
 
+% Feature article
+%\begin{article}
+%	\input{article_Feature3} 
+%\end{article}
 
-% Volunteer's corner ................................................. %
-
-% Volunteer bio
-% \begin{article}                 
-% 	\input{article_Volunteer1} 
-% \end{article}
+%\pagebreak
 
 
 % Recent events ...................................................... %
